--- a/index.html
+++ b/index.html
@@ -1,34 +1,11 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-  <h1>Hi im Shane Adoyi </h1>  
-  <h2>Im a web developer</h2>
-  <hr>
-  <h3><a href="./public/birthday-invite.html">Birthday invite project</a></h3> 
-  <img src="./assets/images/birthday-invite.png" alt="" width="350" height="300">
-
-  <h3><a href="./public/movie-ranking.html">Moving ranking project</a></h3>
-  <img src="./assets/images/movie-ranking.png" alt="" width="350" height="300">
-  <hr>
-  <a href="./public/about.html">About me</a> <a href="./public/contact.html">Contact me</a>
-</body>
-</html>
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+<!-- Write your code below -->
+ <!DOCTYPE html>
+ <h1>The best movies according to shane</h1>
+ <h2>Top 3 movies of all time</h2>
+ <hr>
+ <h3>Avengers endgame</h3>
+ <p>this is one of my favourite marvel movies</p>
+    <h3>Spiderman into the spiderverse</h3>
+    <p>one of the best spiderman movies</p>
+    <h3>Deadpool 1</h3>
+    <p>some of the funniest and best scenes in all of marvel</p>
